@@ -107,7 +107,7 @@ bool StrAgg::deserialize(void* payload) {
   //printf(">>> num %d\n", num);
 
   // Compute offsets
-  int *counts = (int*)((int *)payload + sizeof(int));
+  int *counts = (int*)(payload + sizeof(int));
   char* strs = (char*)((char *)payload + sizeof(int) + (num * sizeof(int)));
 
   char *ptr = strs;
